--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/Matt-Stre/Data-Analysis-Projects/blob/main/Movie%20Correlation.ipynb">Movie Correlation in Python<br />
 									</a></h2>
-									<p> In this project I used Python and Jupyter notebook to find the correlation between certain movie characteristics and the gross income that was made.</p>
+									<p> In this project I used Python and Jupyter Notebook to find the correlation between certain movie characteristics and the gross income that was made.</p>
 								</header>
 								<a href="https://github.com/Matt-Stre/Data-Analysis-Projects/blob/main/Movie%20Correlation.ipynb" class="image main"><img src="https://media.istockphoto.com/photos/empty-red-armchairs-of-a-theater-ready-for-a-show-picture-id1295114854?b=1&k=20&m=1295114854&s=170667a&w=0&h=W9ZbN674554Jsamxo5AfoO3DrSm_7qYS1EnANgusi9o=" alt="" /></a>
 								<ul class="actions special">
