--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Covid Analysis in Tableau<br />
+										<h2><a href="https://public.tableau.com/app/profile/mstrenges/viz/CovidAnalysis_16504067112090/Dashboard1">Covid Analysis in Tableau<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8cHJlc2VudGF0aW9ufGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/mstrenges/viz/CovidAnalysis_16504067112090/Dashboard1" class="image fit"><img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8cHJlc2VudGF0aW9ufGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="" /></a>
 									<p>In the second half of this project I visualized Covid-19 data in Tableau</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/mstrenges/viz/CovidAnalysis_16504067112090/Dashboard1" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
